portfolio, josn 문구 축약

--- a/json/project.json
+++ b/json/project.json
@@ -287,7 +287,7 @@
             }
         }
     },{
-        "title" : "국방전직교육원 전직컨설팅 Admin",
+        "title" : "국방전직교육원 Admin",
         "corp" : "(주)취업뽀개기",
         "description" : "국방부 산하 공공기관으로서 전역예정장병을 대상으로 진로설계, 진로교육, 전직기본교육, 전직컨설팅, 맞춤형 전문교육, 기본교육심화과정 취업컨설팅 제공",
         "workDesc" : "기존 CMS 디자인 고도화 및 반응형 적용등",
@@ -321,7 +321,7 @@
             }
         }
     },{
-        "title" : "2018 평창동계올림픽 뉴스포털",
+        "title" : "평창동계올림픽 뉴스포털",
         "corp" : "(주)경향신문사",
         "description" : "2018년 대한민국의 뜨거운 겨울의 감동과 환희의 순간, 선수 인터뷰, 경기 결과 및 정보, 뒷 얘기 까지 세계 최대의 스포츠 이벤트 평창 동계올림픽의 모든 것을 담았습니다",
         "workDesc" : "스포츠경향 플랫폼에서 디자인 및 퍼블리싱 커스터마이징 진행",
@@ -747,7 +747,7 @@
             }
         }
     },{
-        "title" : "초학력향상지원사이트 홍보영상",
+        "title" : "KICE 서비스 사용안내",
         "corp" : "(주)아이오시스",
         "description" : "학습에 어려움이 있는 학생들 지원을 위한 기초·교과학습 진단 및 보정자료, 정서·심리 진단도구 및 프로그램, 교사교육 프로그램, 학생 활용 프로그램 등 현장에서 학생 지원에 도움이 될 다양한 자료를 보급하고 있습니다.",
         "workDesc" : "",
