--- a/json/project.json
+++ b/json/project.json
@@ -56,7 +56,7 @@
         "description" : "APP·인터넷(웹)·모바일(전화)을 활용한 고객이 매장 방문 예약에서, 상당매니저 방문요청 제공",
         "workDesc" : "PC, Mobile 신규 구축",
         "workRole" : ["퍼블리싱"],
-        "workDate" : "2021.04.12 ~ 2021.04.26(W.Day 3)",
+        "workDate" : "2021.04.12 ~ 2021.04.26(W.Day 4.5)",
         "workRate" : "기여도 100% (API 개발부분 제외)",
         "tag" : ["원페이지", "TM영업", "적응형"],
         "thumb" : "bohum-moa.com.jpg",
@@ -227,7 +227,7 @@
         "workDesc" : "자료수집, 기획, 디자인, 퍼블리싱까지 전 작업 수행. 마크업 단계에서 반응형으로 고도화 진행함",
         "workRole" : ["웹기획", "웹디자인", "퍼블리싱"],
         "workDate" : "2018.12.11 ~ 2019.01.03",
-        "workRate" : "기여도 100% (API 개발부분 제외)",
+        "workRate" : "기여도 100% (API 없음 하드코딩 적용)",
         "tag" : ["기업홈페이지", "사업소개", "취업컨설팅", "원페이지", "반응형", "서포터즈", "프로모션 디자인"],
         "thumb" : "chippo.co.kr.jpg",
         "more" : {
@@ -338,10 +338,10 @@
             }
         }
     },{
-        "title" : "스포츠경향 뉴스플랫폼",
+        "title" : "스포츠경향 뉴스포털",
         "corp" : "(주)경향신문사",
         "description" : "실시간 주요 뉴스 PICK! 독자를 위한 뉴스 큐레이션으로 실시간 이슈를 한 발 더 빨리 접할 수 있으며, 주요 뉴스와 실시간 속보 제공",
-        "workDesc" : "스포츠경향 플랫폼 PC,MO 리뉴얼",
+        "workDesc" : "PC, Mobile 적응형 리뉴얼 작업",
         "workRole" : ["웹디자인", "퍼블리싱"],
         "workDate" : "2017.04.17 ~ 2019.05.22(W.Day 23)",
         "workRate" : "기여도 100% (API 개발부분 제외)",
@@ -355,7 +355,7 @@
             }
         }
     },{
-        "title" : "경향신문 뉴스플랫폼",
+        "title" : "경향신문 뉴스포털",
         "corp" : "(주)경향신문사",
         "description" : "국내 최고 언론사 경향신문 온라인 지면 서비스를 통해 오피니언, 정치, 사회, 경제, 국제, 스포츠, 문화 뉴스를 빠르고 정확하게 제공",
         "workDesc" : "유지/보수, 고도화등 운영업무 지원",
